// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker not render clean icon when allowClear is false 1`] = `
<span
  class="ant-time-picker"
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value="00:00:00"
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
        />
      </svg>
    </i>
  </span>
</span>
`;

exports[`TimePicker prop locale should works 1`] = `
Array [
  <span
    class="ant-time-picker"
    style=""
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Избери дата"
      type="text"
      value="00:00:00"
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </i>
    </span>
    <i
      aria-label="icon: close-circle"
      class="anticon anticon-close-circle ant-time-picker-clear"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </i>
  </span>,
  <div>
    <div
      class="ant-time-picker-panel ant-time-picker-panel-column-3 ant-time-picker-panel-placement-bottomLeft slide-up-appear"
      style="left: -999px; top: -1001px;"
    >
      <div
        class="ant-time-picker-panel-inner"
      >
        <div
          class="ant-time-picker-panel-input-wrap"
        >
          <input
            class="ant-time-picker-panel-input"
            placeholder="Избери дата"
            value="00:00:00"
          />
        </div>
        <div
          class="ant-time-picker-panel-combobox"
        >
          <div
            class="ant-time-picker-panel-select"
          >
            <ul>
              <li
                class="ant-time-picker-panel-select-option-selected"
                role="button"
              >
                00
              </li>
              <li
                class=""
                role="button"
              >
                01
              </li>
              <li
                class=""
                role="button"
              >
                02
              </li>
              <li
                class=""
                role="button"
              >
                03
              </li>
              <li
                class=""
                role="button"
              >
                04
              </li>
              <li
                class=""
                role="button"
              >
                05
              </li>
              <li
                class=""
                role="button"
              >
                06
              </li>
              <li
                class=""
                role="button"
              >
                07
              </li>
              <li
                class=""
                role="button"
              >
                08
              </li>
              <li
                class=""
                role="button"
              >
                09
              </li>
              <li
                class=""
                role="button"
              >
                10
              </li>
              <li
                class=""
                role="button"
              >
                11
              </li>
              <li
                class=""
                role="button"
              >
                12
              </li>
              <li
                class=""
                role="button"
              >
                13
              </li>
              <li
                class=""
                role="button"
              >
                14
              </li>
              <li
                class=""
                role="button"
              >
                15
              </li>
              <li
                class=""
                role="button"
              >
                16
              </li>
              <li
                class=""
                role="button"
              >
                17
              </li>
              <li
                class=""
                role="button"
              >
                18
              </li>
              <li
                class=""
                role="button"
              >
                19
              </li>
              <li
                class=""
                role="button"
              >
                20
              </li>
              <li
                class=""
                role="button"
              >
                21
              </li>
              <li
                class=""
                role="button"
              >
                22
              </li>
              <li
                class=""
                role="button"
              >
                23
              </li>
            </ul>
          </div>
          <div
            class="ant-time-picker-panel-select"
          >
            <ul>
              <li
                class="ant-time-picker-panel-select-option-selected"
                role="button"
              >
                00
              </li>
              <li
                class=""
                role="button"
              >
                01
              </li>
              <li
                class=""
                role="button"
              >
                02
              </li>
              <li
                class=""
                role="button"
              >
                03
              </li>
              <li
                class=""
                role="button"
              >
                04
              </li>
              <li
                class=""
                role="button"
              >
                05
              </li>
              <li
                class=""
                role="button"
              >
                06
              </li>
              <li
                class=""
                role="button"
              >
                07
              </li>
              <li
                class=""
                role="button"
              >
                08
              </li>
              <li
                class=""
                role="button"
              >
                09
              </li>
              <li
                class=""
                role="button"
              >
                10
              </li>
              <li
                class=""
                role="button"
              >
                11
              </li>
              <li
                class=""
                role="button"
              >
                12
              </li>
              <li
                class=""
                role="button"
              >
                13
              </li>
              <li
                class=""
                role="button"
              >
                14
              </li>
              <li
                class=""
                role="button"
              >
                15
              </li>
              <li
                class=""
                role="button"
              >
                16
              </li>
              <li
                class=""
                role="button"
              >
                17
              </li>
              <li
                class=""
                role="button"
              >
                18
              </li>
              <li
                class=""
                role="button"
              >
                19
              </li>
              <li
                class=""
                role="button"
              >
                20
              </li>
              <li
                class=""
                role="button"
              >
                21
              </li>
              <li
                class=""
                role="button"
              >
                22
              </li>
              <li
                class=""
                role="button"
              >
                23
              </li>
              <li
                class=""
                role="button"
              >
                24
              </li>
              <li
                class=""
                role="button"
              >
                25
              </li>
              <li
                class=""
                role="button"
              >
                26
              </li>
              <li
                class=""
                role="button"
              >
                27
              </li>
              <li
                class=""
                role="button"
              >
                28
              </li>
              <li
                class=""
                role="button"
              >
                29
              </li>
              <li
                class=""
                role="button"
              >
                30
              </li>
              <li
                class=""
                role="button"
              >
                31
              </li>
              <li
                class=""
                role="button"
              >
                32
              </li>
              <li
                class=""
                role="button"
              >
                33
              </li>
              <li
                class=""
                role="button"
              >
                34
              </li>
              <li
                class=""
                role="button"
              >
                35
              </li>
              <li
                class=""
                role="button"
              >
                36
              </li>
              <li
                class=""
                role="button"
              >
                37
              </li>
              <li
                class=""
                role="button"
              >
                38
              </li>
              <li
                class=""
                role="button"
              >
                39
              </li>
              <li
                class=""
                role="button"
              >
                40
              </li>
              <li
                class=""
                role="button"
              >
                41
              </li>
              <li
                class=""
                role="button"
              >
                42
              </li>
              <li
                class=""
                role="button"
              >
                43
              </li>
              <li
                class=""
                role="button"
              >
                44
              </li>
              <li
                class=""
                role="button"
              >
                45
              </li>
              <li
                class=""
                role="button"
              >
                46
              </li>
              <li
                class=""
                role="button"
              >
                47
              </li>
              <li
                class=""
                role="button"
              >
                48
              </li>
              <li
                class=""
                role="button"
              >
                49
              </li>
              <li
                class=""
                role="button"
              >
                50
              </li>
              <li
                class=""
                role="button"
              >
                51
              </li>
              <li
                class=""
                role="button"
              >
                52
              </li>
              <li
                class=""
                role="button"
              >
                53
              </li>
              <li
                class=""
                role="button"
              >
                54
              </li>
              <li
                class=""
                role="button"
              >
                55
              </li>
              <li
                class=""
                role="button"
              >
                56
              </li>
              <li
                class=""
                role="button"
              >
                57
              </li>
              <li
                class=""
                role="button"
              >
                58
              </li>
              <li
                class=""
                role="button"
              >
                59
              </li>
            </ul>
          </div>
          <div
            class="ant-time-picker-panel-select"
          >
            <ul>
              <li
                class="ant-time-picker-panel-select-option-selected"
                role="button"
              >
                00
              </li>
              <li
                class=""
                role="button"
              >
                01
              </li>
              <li
                class=""
                role="button"
              >
                02
              </li>
              <li
                class=""
                role="button"
              >
                03
              </li>
              <li
                class=""
                role="button"
              >
                04
              </li>
              <li
                class=""
                role="button"
              >
                05
              </li>
              <li
                class=""
                role="button"
              >
                06
              </li>
              <li
                class=""
                role="button"
              >
                07
              </li>
              <li
                class=""
                role="button"
              >
                08
              </li>
              <li
                class=""
                role="button"
              >
                09
              </li>
              <li
                class=""
                role="button"
              >
                10
              </li>
              <li
                class=""
                role="button"
              >
                11
              </li>
              <li
                class=""
                role="button"
              >
                12
              </li>
              <li
                class=""
                role="button"
              >
                13
              </li>
              <li
                class=""
                role="button"
              >
                14
              </li>
              <li
                class=""
                role="button"
              >
                15
              </li>
              <li
                class=""
                role="button"
              >
                16
              </li>
              <li
                class=""
                role="button"
              >
                17
              </li>
              <li
                class=""
                role="button"
              >
                18
              </li>
              <li
                class=""
                role="button"
              >
                19
              </li>
              <li
                class=""
                role="button"
              >
                20
              </li>
              <li
                class=""
                role="button"
              >
                21
              </li>
              <li
                class=""
                role="button"
              >
                22
              </li>
              <li
                class=""
                role="button"
              >
                23
              </li>
              <li
                class=""
                role="button"
              >
                24
              </li>
              <li
                class=""
                role="button"
              >
                25
              </li>
              <li
                class=""
                role="button"
              >
                26
              </li>
              <li
                class=""
                role="button"
              >
                27
              </li>
              <li
                class=""
                role="button"
              >
                28
              </li>
              <li
                class=""
                role="button"
              >
                29
              </li>
              <li
                class=""
                role="button"
              >
                30
              </li>
              <li
                class=""
                role="button"
              >
                31
              </li>
              <li
                class=""
                role="button"
              >
                32
              </li>
              <li
                class=""
                role="button"
              >
                33
              </li>
              <li
                class=""
                role="button"
              >
                34
              </li>
              <li
                class=""
                role="button"
              >
                35
              </li>
              <li
                class=""
                role="button"
              >
                36
              </li>
              <li
                class=""
                role="button"
              >
                37
              </li>
              <li
                class=""
                role="button"
              >
                38
              </li>
              <li
                class=""
                role="button"
              >
                39
              </li>
              <li
                class=""
                role="button"
              >
                40
              </li>
              <li
                class=""
                role="button"
              >
                41
              </li>
              <li
                class=""
                role="button"
              >
                42
              </li>
              <li
                class=""
                role="button"
              >
                43
              </li>
              <li
                class=""
                role="button"
              >
                44
              </li>
              <li
                class=""
                role="button"
              >
                45
              </li>
              <li
                class=""
                role="button"
              >
                46
              </li>
              <li
                class=""
                role="button"
              >
                47
              </li>
              <li
                class=""
                role="button"
              >
                48
              </li>
              <li
                class=""
                role="button"
              >
                49
              </li>
              <li
                class=""
                role="button"
              >
                50
              </li>
              <li
                class=""
                role="button"
              >
                51
              </li>
              <li
                class=""
                role="button"
              >
                52
              </li>
              <li
                class=""
                role="button"
              >
                53
              </li>
              <li
                class=""
                role="button"
              >
                54
              </li>
              <li
                class=""
                role="button"
              >
                55
              </li>
              <li
                class=""
                role="button"
              >
                56
              </li>
              <li
                class=""
                role="button"
              >
                57
              </li>
              <li
                class=""
                role="button"
              >
                58
              </li>
              <li
                class=""
                role="button"
              >
                59
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`TimePicker renders addon correctly 1`] = `
<div
  class="ant-time-picker-panel-addon"
>
  <button
    type="button"
  >
    Ok
  </button>
</div>
`;
